feat:增加了获取个人信息时的正确个数字段
